v0.2.0: Upgrade to JDK 17
Signed-off-by: Manoel Campos <manoelcampos@gmail.com>